// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for char-based-offset-error-span 1`] = `
{
  "errors": [
    {
      "formatted": "error[scss]: Sass Error
  ┌─ tests/statsCases/char-based-offset-error-span/index.scss:5:10
  │
5 │   wrong: $wrong;
  │          ^^^^^^ Undefined variable.

",
      "message": "Undefined variable.",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for char-based-offset-error-span 2`] = `
"
error[scss]: Sass Error
  ┌─ tests/statsCases/char-based-offset-error-span/index.scss:5:10
  │
5 │   wrong: $wrong;
  │          ^^^^^^ Undefined variable.

"
`;

exports[`StatsTestCases should print correct stats for filename 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.xxxx.js",
      "size": 4402,
      "type": "asset",
    },
    {
      "chunkNames": [
        "dynamic_js",
      ],
      "chunks": [
        "dynamic_js",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "dynamic_js.xxxx.js",
      "size": 254,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": false,
      "files": [
        "dynamic_js.xxxx.js",
      ],
      "id": "dynamic_js",
      "initial": false,
      "names": [
        "dynamic_js",
      ],
      "size": 32,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "main.xxxx.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 38,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 4402,
        },
      ],
      "assetsSize": 4402,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 38,
      "type": "module",
    },
    {
      "chunks": [
        "dynamic_js",
      ],
      "id": "426",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
      "moduleType": "js",
      "name": "./dynamic.js",
      "size": 32,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for filename 2`] = `
"             Asset       Size      Chunks             Chunk Names
      main.xxxx.js    4.3 KiB        main  [emitted]  main
dynamic_js.xxxx.js  254 bytes  dynamic_js  [emitted]  dynamic_js
Entrypoint main = main.xxxx.js
chunk {dynamic_js} dynamic_js.xxxx.js (dynamic_js) 32 bytes
chunk {main} main.xxxx.js (main) 38 bytes [entry]
[10] ./index.js 38 bytes {main}
[426] ./dynamic.js 32 bytes {dynamic_js}"
`;

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 4258,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 25,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 4258,
        },
      ],
      "assetsSize": 4258,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 25,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for hot+production 2`] = `
"    Asset      Size  Chunks             Chunk Names
bundle.js  4.16 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 25 bytes [entry]
[10] ./index.js 25 bytes {main}"
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
  ],
  "errorsCount": 2,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode



error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

",
      "message": "Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"
error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

",
      "message": "Expected ';', '}' or <eof>",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for parse-error 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

"
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 4317,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 51,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 4317,
        },
      ],
      "assetsSize": 4317,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

",
      "message": "Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 51,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 2`] = `
"    Asset      Size  Chunks             Chunk Names
bundle.js  4.22 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 51 bytes [entry]
[10] ./index.js 51 bytes {main}

error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 4937,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 39,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 4937,
        },
      ],
      "assetsSize": 4937,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "Export should be relative path and start with "./", but got ../../index.js
",
      "message": "Export should be relative path and start with "./", but got ../../index.js",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 39,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 2`] = `
"    Asset      Size  Chunks             Chunk Names
bundle.js  4.82 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 39 bytes [entry]
[10] ./index.js 39 bytes {main}

Export should be relative path and start with "./", but got ../../index.js
"
`;

exports[`StatsTestCases should print correct stats for sass-warnings 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [
    {
      "formatted": "warning[scss]: Sass Warning
  ┌─ tests/statsCases/sass-warnings/index.scss:2:11
  │
2 │   width: (12px/4px);
  │           ^^^^^^^^ Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div

",
      "message": "Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div",
    },
  ],
  "warningsCount": 1,
}
`;

exports[`StatsTestCases should print correct stats for sass-warnings 2`] = `
"
warning[scss]: Sass Warning
  ┌─ tests/statsCases/sass-warnings/index.scss:2:11
  │
2 │   width: (12px/4px);
  │           ^^^^^^^^ Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div

"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 4367,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 26,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 4367,
        },
      ],
      "assetsSize": 4367,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 26,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"    Asset      Size  Chunks             Chunk Names
bundle.js  4.26 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 26 bytes [entry]
[10] ./index.js 26 bytes {main}"
`;
